--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav>
             <div class="navigationbar">
             <ul>
-                <li><a href="aboutM.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="ethenresume4.0.png">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://mathewjod.github.io/about/">About Me</a></li>
+                <li><a href="https://mathewjod.github.io/projects/">Projects</a></li>
+                <li><a href="https://mathewjod.github.io/resume/">Resume</a></li>
+                <li><a href="https://mathewjod.github.io/contact/">Contact</a></li>
             </ul>
             </div>
             
